--- a/components/style.css
+++ b/components/style.css
@@ -16,23 +16,26 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 80vh;
+    height: 50vh;
     object-fit: cover;
     z-index: 1;
-    opacity: 0.8;
+    opacity: 1;
 }
 
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-image: url(./edition_collector.jpg);
-    mix-blend-mode: overlay;
-    z-index: 2;
+.produits{
+  margin-top: 60vh;
+}
+
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
   }
-h1{
-    color: aqua;
 
-}
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
